--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,6 @@
 <#include "header.html">
 
-<i>Welcome to your home</i>
+<i>Hello ${member.name}</i>
 <a href='/logout'>Log Out</a>
 
 <#include "footer.html">
