--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,10 @@
 <#include "header.html">
 
-<i>Hello ${member.name}</i>
-<a href='/logout'>Log Out</a>
+<div class='container'>
+	<i>Hello ${member.name}</i>
+	<br>
+	<a class='btn btn-outline-primary' href='/new'>New</a>
+	<a class='btn btn-outline-primary' href='/logout'>Log Out</a>
+</div>
 
 <#include "footer.html">
