--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -7,7 +7,7 @@
 </style>
 
 <div class="container">
-	<form method="post">
+	<form method="post" enctype="multipart/form-data">
 		<h1>New Post</h1>
 		<input name="topic"
 			class="form-control"
@@ -17,6 +17,7 @@
 			class="form-control"
 			placeholder="Detail"
 			></textarea>
+		<input type="file" name="photo">
 		<button class="btn btn-primary"
 			>Post</button>
 	</form>
